conditions.Conditions.scala.code
if estFaceMur()==true {
  recule()
}
if !estFaceMur()==true {
  avance()
}